Fixed ISO data and changed tag br to sourse

--- a/Lesson15/HW/index.html
+++ b/Lesson15/HW/index.html
@@ -37,13 +37,18 @@
         name="search"
         placeholder="Enter you name"></li>
     <li><hr></li>
-    <li><br></li>
+    <li>
+      <p>It is tag sourse</p>
+      <audio controls>
+        <source src="audio/two_feet-i_feel_like_im_drowning.mp3" type="audio/mpeg">
+      </audio>
+    </li>
     <li>Word encap<wbr>sulation can be moved using the tag wbr</li>
   </ul>
   <hr>
 
   <div>
-    <time datatime="09-01-2021"><i>15янв. 2020</i></time>
+    <time datatime="2021-01-09"><i>15янв. 2020</i></time>
     <h1>Что такое верстка</h1>
     <p>
       <strong>Верстка</strong> по праву считается одним <i><b><u>из самых важных этапов создания сайта</u></b>. От<br>
