Fixed all tasks

--- a/Lesson16/HW/task2/index.html
+++ b/Lesson16/HW/task2/index.html
@@ -10,11 +10,13 @@
 	<header class="box box-1">
 		<img src="image/cat1.png" width="150" height="100" alt="Error">
 		<div class="header-items">
-			<div class="header-item">Item1</div>
-			<div class="header-item">Item2</div>
-			<div class="header-item">Item3</div>
-			<div class="header-item">Item4</div>
-			<div class="header-item">Item5</div>
+			<nav>
+				<a class="header-item" href="#">Item1</a>
+				<a class="header-item" href="#">Item2</a>
+				<a class="header-item" href="#">Item3</a>
+				<a class="header-item" href="#">Item4</a>
+				<a class="header-item" href="#">Item5</a>
+			</nav>
 		</div>
 	</header>
 
